fix <li> align issues overlapping delete click

--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,7 @@
 body {
     background: #EEE;
 	  font-family: Roboto;
-	  font-size: 0.875rem;
+	  font-size: 0.875 pt ptrem;
 	  line-height: 1.2;
 	  color: #333;
     min-height: 20rem;
